--- a/index.html
+++ b/index.html
@@ -249,9 +249,9 @@
 
   
   <div class="foto_block">
-    <img src="kawa1.jfif" alt="kawa1" class="zdjecia">
-    <img src="kawa2.jpg" alt="kawa2" class="zdjecia">
-    <img src="kawa3.webp" alt="kawa3" class="zdjecia">
+    <img src="images/kawa1.jfif" alt="kawa1" class="zdjecia">
+    <img src="images/kawa2.jpg" alt="kawa2" class="zdjecia">
+    <img src="images/kawa3.webp" alt="kawa3" class="zdjecia">
   </div>
   <footer class="footer">
   <div class="footer_content">
